--- a/src/components/NewTab/style.scss
+++ b/src/components/NewTab/style.scss
@@ -9,11 +9,14 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    position: relative;
+    z-index:2;
 
     .new-tab-image {
         width: 100vw;
         height: 100vh;
         opacity: 0;
+        z-index: 2;
         transition: opacity .5s, object-fit .5s;
         // background-size: 100%;
         // background-repeat: no-repeat;
@@ -24,9 +27,24 @@ body {
         }
     }
 
+    .new-tab-clone {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+        opacity: 0;
+        transition: .25s opacity;
+
+        &.active {
+            opacity: .5;
+        }
+    }
+
     .icon-tray {
         position: fixed;
-        z-index: 1;
+        z-index: 9;
 
         .icon {
             filter: drop-shadow(0px 1px 5px rgba(0, 0, 0, 0.818));
@@ -69,7 +87,7 @@ body {
         width: 20px;
         height: 20px;
         cursor: pointer;
-        padding: 10px;
+        padding: 8px;
     }
 
     .links {
@@ -77,7 +95,7 @@ body {
         position: absolute;
         bottom: 16px;
         left: 16px;
-        z-index: 1;
+        z-index: 9;
         display: flex;
         align-items: center;
         text-shadow: 0px 1px 5px black;
@@ -90,6 +108,11 @@ body {
         // a {
         //     text-shadow: 0px 1px 5px;
         // }
+
+        .icon-group {
+            display: flex;
+            flex-direction: row;
+        }
 
         .icon {
             width: 20px;
